# StableTTSEx

./: .gitignore  CLAUDE.md  README.md  api.py  config.py  generate-audio-list.py  inference.ipynb  precompute_spk_emb.py  preprocess.py  pyproject.toml  requirements.txt  train.py  webui.py
datas/: dataset.py  sampler.py
docs/: architecture-improvement-research.md  blog-draft-japanese-pretraining.md  phase2-plan.md  phase3-plan.md  pretraining-plan.md  pretraining-report.md  research-summary.md
filelists/: holdout_speakers.txt
models/: diffusion_transformer.py  duration_predictor.py  estimator.py  flow_matching.py  model.py  reference_encoder.py  text_encoder.py  tla_sa.py
recipes/: AiSHELL3.py  BZNSYP_标贝女声.py  VCTK_huggingface.py  genshin_en_小虫哥ver.py  genshin_zh_小虫哥ver.py  hifi_tts.py  libriTTS.py  moe_speech_plus_filelist.py
tests/: conftest.py  test_api_contracts.py  test_config.py  test_data.py  test_ema.py  test_flow_matching.py  test_get_style_vector.py  test_mas.py  test_model.py  test_reference_encoder.py  test_symbols.py  test_text_g2p.py  test_utils_train.py
text/: __init__.py  cleaners.py  english.py  japanese.py  mandarin.py  symbols.py
utils/: audio.py  ema.py  load.py  mas.py  mask.py  scheduler.py
vocoders/bigvgan/: __init__.py  bigvgan.py  model.py  utils.py
