[project]
name = "stablettsex"
version = "1.1.0"
description = "StableTTSEx: fork of KdaiP/StableTTS (flow-matching + DiT TTS, zh/en/ja) with Japanese defaults"
readme = "README.md"
# 3.11 固定は環境再現性のため（pyopenjtalk-plus は cp311〜cp314 の wheel を提供済み）。
# 引き上げは torch cu128 wheel / numba / numpy の対応確認と venv 再構築を伴うため別コミットで行うこと。
requires-python = ">=3.11,<3.12"
dependencies = [
    # torchaudio 2.9+ は load/save が TorchCodec 委譲になるため 2.8 系に固定
    # CUDA 版は [tool.uv.sources] で cu128 インデックスから解決される
    "torch==2.8.*",
    "torchaudio==2.8.*",

    # <2 は旧 pyopenjtalk-prebuilt の ABI 制約の名残。pyopenjtalk-plus は numpy 2 対応のため
    # 緩和可能だが、numba/torch/soundfile 一式の再検証を伴うため別コミットで行う
    "numpy>=1.26,<2",
    "tqdm",
    "soundfile",   # torchaudio の音声 I/O バックエンド確保用（直接 import なし・削除不可）
    "tensorboard", # torch.utils.tensorboard.SummaryWriter が要求
    "numba>=0.59", # monotonic_align（推論経路でも必須）
    "torchdiffeq", # ODE ソルバー

    # g2p（api.py が全言語を無条件 import するため日本語のみの運用でも全部必要）
    "pypinyin",
    "jieba",
    "eng-to-ipa",
    "unidecode",
    "inflect",
    # r9y9/pyopenjtalk のメンテされているフォーク（tsukumijima）。import 名は pyopenjtalk のまま、
    # 辞書は wheel 同梱（ネットワーク DL なし）、pkg_resources 非依存（setuptools 固定も不要になった）。
    # 0.x 系のため破壊的変更防止に上限を付ける
    "pyopenjtalk-plus>=0.4.1,<0.5",
]

[project.optional-dependencies]
webui = [
    "gradio>=5,<6", # gradio 6 は破壊的 API 変更あり。webui.py 検証後に上げる
    "matplotlib",
]
recipes = [
    "openpyxl", # recipes/genshin_*.py
    "pandas",   # recipes/VCTK_huggingface.py
]

[tool.uv]
# スクリプト集であり配布パッケージではないため、プロジェクト自身のビルドを無効化
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
