[project]
name = "stablettsex"
version = "1.1.0"
description = "StableTTSEx: fork of KdaiP/StableTTS (flow-matching + DiT TTS, zh/en/ja) with Japanese defaults"
readme = "README.md"
# 3.13 固定（単一マイナー固定で環境再現性を確保）。上限 <3.14 は方針に加え技術的制約でもある:
# torch 2.8+cu128 と pyopenjtalk-plus に cp314 の Windows wheel が存在しない。
requires-python = ">=3.13,<3.14"
dependencies = [
    # torchaudio 2.9+ は load/save が TorchCodec 委譲になるため 2.8 系に固定
    # CUDA 版は [tool.uv.sources] で cu128 インデックスから解決される
    "torch==2.8.*",
    "torchaudio==2.8.*",

    # >=2.1 は cp313 の win wheel が存在する最初の系列。<2.5 は numba 0.66 の numpy 対応上限
    # （numba が numpy 2.5 に対応したら緩和可）
    "numpy>=2.1,<2.5",
    "tqdm",
    "soundfile",   # torchaudio の音声 I/O バックエンド確保用（直接 import なし・削除不可）
    "tensorboard", # torch.utils.tensorboard.SummaryWriter が要求
    "numba>=0.65", # monotonic_align（推論経路でも必須）。numpy 2.4 対応は 0.65 以降
    "torchdiffeq", # ODE ソルバー

    # g2p（api.py が全言語を無条件 import するため日本語のみの運用でも全部必要）
    "pypinyin",
    "jieba",
    "eng-to-ipa",
    "unidecode",
    "inflect",
    # r9y9/pyopenjtalk のメンテされているフォーク（tsukumijima）。import 名は pyopenjtalk のまま、
    # 辞書は wheel 同梱（ネットワーク DL なし）、pkg_resources 非依存（setuptools 固定も不要になった）。
    # onnxruntime extra は use_vanilla=False での「何」読み推定に必要（text/japanese.py 参照）。
    # 0.x 系のため破壊的変更防止に上限を付ける
    "pyopenjtalk-plus[onnxruntime]>=0.4.1,<0.5",
]

[project.optional-dependencies]
webui = [
    "gradio>=5,<6", # gradio 6 は破壊的 API 変更あり。webui.py 検証後に上げる
    "matplotlib",
]
recipes = [
    "openpyxl", # recipes/genshin_*.py
    "pandas",   # recipes/VCTK_huggingface.py
]

[tool.uv]
# スクリプト集であり配布パッケージではないため、プロジェクト自身のビルドを無効化
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
