[project]
name = "stablettsex"
version = "1.1.0"
description = "StableTTSEx: fork of KdaiP/StableTTS (flow-matching + DiT TTS, zh/en/ja) with Japanese defaults"
readme = "README.md"
# 3.13 固定（単一マイナー固定で環境再現性を確保）。上限 <3.14 は方針に加え技術的制約でもある:
# torch 2.8+cu128 と pyopenjtalk-plus に cp314 の Windows wheel が存在しない。
requires-python = ">=3.13,<3.14"
dependencies = [
    # torchaudio 2.9+ は load/save が TorchCodec 委譲になるため 2.8 系に固定
    # CUDA 版は [tool.uv.sources] で cu128 インデックスから解決される
    "torch==2.8.*",
    "torchaudio==2.8.*",

    # >=2.1 は cp313 の win wheel が存在する最初の系列。<2.5 は numba 0.66 の numpy 対応上限
    # （numba が numpy 2.5 に対応したら緩和可）
    "numpy>=2.1,<2.5",
    "tqdm",
    "soundfile",   # torchaudio の音声 I/O バックエンド確保用（直接 import なし・削除不可）
    "tensorboard", # torch.utils.tensorboard.SummaryWriter が要求
    "numba>=0.65", # monotonic_align（推論経路でも必須）。numpy 2.4 対応は 0.65 以降
    "torchdiffeq", # ODE ソルバー

    # g2p（api.py が全言語を無条件 import するため日本語のみの運用でも全部必要）
    "pypinyin",
    "jieba",
    "eng-to-ipa",
    "unidecode",
    "inflect",
    # r9y9/pyopenjtalk のメンテされているフォーク（tsukumijima）。import 名は pyopenjtalk のまま、
    # 辞書は wheel 同梱（ネットワーク DL なし）、pkg_resources 非依存（setuptools 固定も不要になった）。
    # onnxruntime extra は use_vanilla=False での「何」読み推定に必要（text/japanese.py 参照）。
    # 0.x 系のため破壊的変更防止に上限を付ける
    "pyopenjtalk-plus[onnxruntime]>=0.4.1,<0.5",
]

[project.optional-dependencies]
webui = [
    "gradio>=5,<6", # gradio 6 は破壊的 API 変更あり。webui.py 検証後に上げる
    "matplotlib",
]
recipes = [
    "openpyxl", # recipes/genshin_*.py
    "pandas",   # recipes/VCTK_huggingface.py
]

[dependency-groups]
# 開発ツール（PEP 735。uv sync でデフォルト同期される）。ruff は lint と format を兼ねる
dev = [
    "ruff>=0.15,<0.16",
    "pytest>=8,<9", # tests/ 一式（GPU/実チェックポイント/ネットワーク不要の CPU テスト）
]

[tool.uv]
# スクリプト集であり配布パッケージではないため、プロジェクト自身のビルドを無効化
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 120
target-version = "py313"
# vendor / 3rd-party のコードは lint・format 対象外にして、自分たちが著作しない部分を churn させない:
#   text/cn2an・text/custom_pypinyin_dict … 取り込んだ変換ライブラリ/拼音辞書（大半が自動生成データ）
#   vocoders/bigvgan・vocoders/ffgan・vocoders/vocos … vendor したボコーダ実装
#   monotonic_align … VITS 由来の MAS（numba JIT 実装）
extend-exclude = [
    "text/cn2an",
    "text/custom_pypinyin_dict",
    "vocoders/bigvgan",
    "vocoders/ffgan",
    "vocoders/vocos",
    "monotonic_align",
]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",  # 行長は formatter に委譲（折返し不能な密な式・長い文字列が残り lint では潰せないため）
    "UP031", # '%s' % x 形式。upstream 由来 g2p の正規表現組立て慣用で defect ではないため許容
]

[tool.ruff.lint.per-file-ignores]
# upstream 由来の g2p フロントエンド。import 前にモジュールレベルの文字列/初期化があり順序に意図がある
"text/english.py" = ["E402"]
"text/mandarin.py" = ["E402"]
# conftest は torch import 前に CUDA_VISIBLE_DEVICES を設定する必要があり、import が先頭に来ない
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."] # リポジトリ root を sys.path に載せ config/models/text/utils/datas を絶対 import 可能にする
addopts = "-q"
filterwarnings = [
    # jieba が import 時に出す無害な警告（本文の注意点参照）。テスト失敗と混同しないよう抑制
    "ignore:pkg_resources is deprecated as an API:UserWarning",
]
